# project-manager

./: .rusty-hook.toml  Cargo.toml  README.md  build.rs
completions/: _project-manager  project-manager.bash
src/: cli.yml  main.rs  setup.rs  subcommands.rs
src/subcommands/: add.rs  clone.rs  cmd.rs  delete.rs  list.rs  mod.rs  pull.rs  status.rs  util.rs
