[package]
name = "pm"
version = "0.3.1"
authors = ["Tom McKernan <tmeaglei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.0", features = ["yaml", "color"]}
json = "0.11.15"
spinners = "1.0.0"
